update(mock): gradle